more about in pt to en

--- a/public/portfolio-ui-apollion_en.html
+++ b/public/portfolio-ui-apollion_en.html
@@ -90,7 +90,7 @@
                                     <p>From 2020 until January 2022 I worked exclusively for Captalys and with some parallel activities with classes - for Prodevs or with content for my Youtube channel.</p>
                                     <p>During this period I got totally involved with the idea of Design in Scale, therefore, I worked with the structuring of a Design System from scratch, from its premises to its Design language - the focus of the work was, to a large extent, on how to distribute this for other Designers (Design Ops & Tooling) and also on how to integrate the designed patterns with the Engineering team.</p>
                                 </div>
-                                <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
+                                <a href="#more-about" class="btn btn-outline-primary btn-lg">More about <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
                                     <a href="portfolio_en.html#ui" class="title"><!-- se vier a hash com #ux ou #ui define o layout do "back" -->
                                     <i>Portfolio</i> <b>UI</b>
