--- a/public/portfolio-ui-ryd_en.html
+++ b/public/portfolio-ui-ryd_en.html
@@ -89,7 +89,7 @@
                                 <div class="description">
                                     <p>RYD is a startup from Belém/PA that operates in auctions of offers to buy agricultural commodities. I did the Art Direction for logo development and then wireframes and navigational flow, delivering a navigable prototype to be implemented by the development team, along with a UI KIT based on Google Material.</p>
                                 </div>
-                                <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
+                                <a href="#more-about" class="btn btn-outline-primary btn-lg">More about <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
                                     <a href="portfolio_en.html#ui" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
