--- a/public/portfolio-ux-innovatech_en.html
+++ b/public/portfolio-ux-innovatech_en.html
@@ -88,7 +88,7 @@
                                 </h1>
                                 <div class="description">I helped to understand the idea, we designed the proto-personas, applied Design Thinking methodologies and molded the business for the client.</p>
                                 </div>
-                                <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
+                                <a href="#more-about" class="btn btn-outline-primary btn-lg">More about <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
                                     <a href="portfolio_en.html#ux" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
